--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <a href="./alejo-mecanicomoto-movil/index.html" class="btn-cajon">🛠️ Alejo Mecánico</a>
         <a href="./ferreteria-la-hacienda/index.html" class="btn-cajon">🔨 Ferretería Hacienda</a>
         <a href="./labarberia/index.html" class="btn-cajon">💈 LaBarbería</a>
-        <a href="./atarraya.html" class="btn-cajon">🎣 Atarrayas & Hamacas</a>
+        <a href="./atarraya/index.html" class="btn-cajon">🎣 Atarrayas & Hamacas</a>
         <a href="./paula-areiza/index.html" class="btn-cajon">👠 Ventas Paula Areiza</a>
         <a href="./nelson/index.html" class="btn-cajon">👤 Nelson Servicios</a>
 
