--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <a href="./pollo-harana/index.html" class="btn-cajon">🍗 Pollo Harana</a>
         <a href="./estos-burgers/index.html" class="btn-cajon">🍔 Estos Burgers</a>
         <a href="./deleitesaludable/index.html" class="btn-cajon">🥗 Deleite Saludable</a>
+        <a href="./polloharana/index.html" class="btn-cajon">🥗 Pollo Harana</a>
 
         <div class="categoria">Tiendas y Mercados</div>
         <a href="./tienda-azul/index.html" class="btn-cajon">🔵 Tienda Azul</a>
