--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <a href="./estos-burgers/index.html" class="btn-cajon">🍔 Estos Burgers</a>
         <a href="./deleitesaludable/index.html" class="btn-cajon">🥗 Deleite Saludable</a>
         <a href="./polloharana/index.html" class="btn-cajon">🥗 Pollo Harana</a>
+        <a href="./lapizzadefranco/index.html" class="btn-cajon">🥗 La Pizza de Franco</a>
 
         <div class="categoria">Tiendas y Mercados</div>
         <a href="./tienda-azul/index.html" class="btn-cajon">🔵 Tienda Azul</a>
@@ -66,7 +67,7 @@
         <a href="./labarberia/index.html" class="btn-cajon">💈 LaBarbería</a>
         <a href="./atarraya/index.html" class="btn-cajon">🎣 Atarrayas & Hamacas</a>
         <a href="./paula-areiza/index.html" class="btn-cajon">👠 Ventas Paula Areiza</a>
-        <a href="./nelson/index.html" class="btn-cajon">👤 Nelson Servicios</a>
+        <a href="./nelson/index.html" class="btn-cajon">👤 Tienda Mas x Menos</a>
 
         <div class="categoria">Transporte e Inversiones</div>
         <a href="./sotracor-caucasia/index.html" class="btn-cajon">🚌 Sotracor Caucasia</a>
