--- a/arepaslatroncal/index.html
+++ b/arepaslatroncal/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Arepas La Troncal - Pedidos Online</title>
+    <title>Arepas La Troncal - Pedidos</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <style>
         :root { --primary: #ffcc00; --secondary: #e67e22; --dark: #2c3e50; --light: #f8f9fa; --success: #25d366; }
@@ -13,30 +13,32 @@
         header { background: var(--primary); padding: 15px; text-align: center; border-bottom: 4px solid var(--secondary); box-shadow: 0 2px 10px rgba(0,0,0,0.1); z-index: 10; }
         header h1 { font-size: 1.3rem; text-transform: uppercase; }
 
-        .content { flex: 1; overflow-y: auto; padding: 15px; padding-bottom: 120px; }
+        .content { flex: 1; overflow-y: auto; padding: 15px; padding-bottom: 150px; }
 
-        /* Tarjetas de Producto estilo Web App */
+        /* Formulario de Datos del Cliente */
+        .customer-data { background: #fff3cd; padding: 15px; border-radius: 15px; margin-bottom: 20px; border: 1px solid #ffeeba; }
+        .customer-data h2 { font-size: 0.9rem; margin-bottom: 10px; text-align: center; color: #856404; }
+        input { width: 100%; padding: 12px; margin-bottom: 8px; border: 1px solid #ddd; border-radius: 10px; font-family: inherit; font-size: 14px; outline: none; }
+
+        /* Tarjetas de Producto */
         .product-card { background: white; border-radius: 15px; padding: 15px; margin-bottom: 12px; display: flex; align-items: center; justify-content: space-between; box-shadow: 0 4px 6px rgba(0,0,0,0.05); border-left: 5px solid var(--primary); }
         .product-info h3 { font-size: 1rem; margin-bottom: 2px; }
         .product-price { color: var(--secondary); font-weight: 600; font-size: 0.9rem; }
 
-        /* Controles de Cantidad */
         .qty-control { display: flex; align-items: center; gap: 12px; background: #f0f0f0; padding: 5px 10px; border-radius: 10px; }
         .btn-qty { border: none; background: white; width: 28px; height: 28px; border-radius: 5px; font-weight: bold; cursor: pointer; }
         .qty-num { font-weight: 600; min-width: 15px; text-align: center; }
 
-        /* Sección de Datos del Cliente */
-        .customer-data { background: #fff3cd; padding: 15px; border-radius: 15px; margin-bottom: 20px; border: 1px solid #ffeeba; }
-        .customer-data h2 { font-size: 0.9rem; margin-bottom: 10px; text-align: center; color: #856404; }
-        input { width: 100%; padding: 12px; margin-bottom: 8px; border: 1px solid #ddd; border-radius: 10px; font-family: inherit; font-size: 14px; outline: none; }
-        input:focus { border-color: var(--secondary); }
+        /* Cajón de Total */
+        .total-box { background: var(--dark); color: white; padding: 15px; border-radius: 15px; text-align: center; margin-top: 20px; }
+        .total-box span { font-size: 1.5rem; font-weight: bold; color: var(--primary); }
 
-        /* Botón de WhatsApp Flotante */
-        .footer-action { position: fixed; bottom: 0; left: 0; width: 100%; background: white; padding: 15px; border-top: 1px solid #eee; z-index: 100; }
-        .btn-whatsapp { background: var(--success); color: white; border: none; width: 100%; padding: 15px; border-radius: 12px; font-weight: bold; font-size: 1rem; display: flex; align-items: center; justify-content: center; gap: 10px; cursor: pointer; box-shadow: 0 4px 15px rgba(37, 211, 102, 0.3); }
+        /* Footer y Firma */
+        .footer-action { position: fixed; bottom: 0; left: 0; width: 100%; background: white; padding: 10px 15px; border-top: 1px solid #eee; z-index: 100; }
+        .btn-whatsapp { background: var(--success); color: white; border: none; width: 100%; padding: 15px; border-radius: 12px; font-weight: bold; font-size: 1rem; display: flex; align-items: center; justify-content: center; gap: 10px; cursor: pointer; }
+        .copyright { text-align: center; font-size: 0.6rem; color: #999; margin-top: 10px; text-transform: uppercase; letter-spacing: 1px; }
 
         .hidden { display: none !important; }
-        .status-msg { text-align: center; padding: 20px; font-size: 0.9rem; color: #666; }
     </style>
 </head>
 <body>
@@ -46,35 +48,38 @@
     </header>
 
     <div class="content">
-        <div id="subscription-status" class="hidden"></div>
-
         <div class="customer-data">
-            <h2>📍 Información de Entrega</h2>
-            <input type="text" id="c-name" placeholder="Tu Nombre Completo">
-            <input type="text" id="c-address" placeholder="Dirección de Domicilio">
-            <input type="text" id="c-note" placeholder="Nota adicional (Ej: Casa de reja blanca)">
+            <h2>📝 DATOS DEL PEDIDO</h2>
+            <input type="text" id="c-name" placeholder="Tu Nombre">
+            <input type="number" id="c-phone" placeholder="Tu Celular">
+            <input type="text" id="c-address" placeholder="Dirección de entrega">
         </div>
 
         <div id="menu-list">
             </div>
 
-        <button id="btn-admin-access" style="opacity: 0.3; background: none; border: none; width: 100%; margin-top: 20px; font-size: 0.6rem;">⚙️ GESTIÓN</button>
-        
-        <div id="admin-panel" class="hidden" style="margin-top: 20px; padding: 15px; border: 1px dashed #ccc; border-radius: 10px;">
-            <input type="text" id="p-name" placeholder="Nombre del Producto">
-            <input type="number" id="p-price" placeholder="Precio">
-            <button onclick="saveNewProduct()" style="width: 100%; padding: 10px; background: var(--dark); color: white; border-radius: 10px; border: none; font-weight: bold;">GUARDAR PRODUCTO</button>
+        <div class="total-box">
+            TOTAL DEL PEDIDO<br>
+            $<span id="total-val">0</span>
         </div>
+
+        <button id="btn-admin-access" style="opacity: 0.1; background: none; border: none; width: 100%; margin-top: 30px; font-size: 0.5rem;">⚙️ ADMIN</button>
+        <div id="admin-panel" class="hidden">
+            <input type="text" id="p-name" placeholder="Nuevo Producto">
+            <input type="number" id="p-price" placeholder="Precio">
+            <button onclick="saveNewProduct()" style="width:100%; padding:10px; background:var(--secondary); color:white; border-radius:10px; border:none;">+ AGREGAR</button>
+        </div>
+
+        <p class="copyright">Desarrollada por Vibras Positivas © 2026<br>Todos los derechos reservados</p>
     </div>
 
     <div class="footer-action">
         <button class="btn-whatsapp" onclick="processOrder()">
-            🛒 ENVIAR PEDIDO ($<span id="total-val">0</span>)
+            ✅ ENVIAR PEDIDO A WHATSAPP
         </button>
     </div>
 
     <script type="module">
-        // Importamos solo lo necesario de Firebase para el control de suscripción
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
         import { getDatabase, ref, get } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
 
@@ -87,25 +92,17 @@
         const app = initializeApp(firebaseConfig);
         const db = getDatabase(app);
 
-        const TRONCAL_ID = "AREPAS_TRONCAL"; // ID para control de suscripción
         const WS_NUMBER = "573122493344";
+        let userPos = "";
+
+        // Captura GPS invisible
+        navigator.geolocation.getCurrentPosition(p => {
+            userPos = `https://www.google.com/maps?q=${p.coords.latitude},${p.coords.longitude}`;
+        });
 
         let products = JSON.parse(localStorage.getItem('troncal_prods')) || [
-            { id: 1, name: "Arepa de Maíz Blanco", price: 2500, qty: 0 }
+            { id: 1, name: "Paquete de Arepa Maíz Blanco", price: 5000, qty: 0 }
         ];
-
-        // Verificación de suscripción al iniciar
-        async function checkAppStatus() {
-            try {
-                const snap = await get(ref(db, 'usuarios_moto/' + TRONCAL_ID));
-                if (snap.exists()) {
-                    const vence = new Date(snap.val().vencimiento);
-                    if (new Date() > vence) {
-                        document.body.innerHTML = "<div class='status-msg'>⚠️ El servicio de pedidos está temporalmente suspendido. Contacte al administrador.</div>";
-                    }
-                }
-            } catch (e) { console.log("Offline mode"); }
-        }
 
         window.renderMenu = () => {
             const list = document.getElementById('menu-list');
@@ -125,8 +122,7 @@
                         <button class="btn-qty" onclick="updateP(${i}, -1)">-</button>
                         <span class="qty-num">${p.qty || 0}</span>
                         <button class="btn-qty" onclick="updateP(${i}, 1)">+</button>
-                    </div>
-                `;
+                    </div>`;
                 list.appendChild(div);
             });
             document.getElementById('total-val').innerText = total.toLocaleString();
@@ -138,33 +134,34 @@
         };
 
         window.processOrder = () => {
-            const name = document.getElementById('c-name').value.trim();
-            const address = document.getElementById('c-address').value.trim();
-            const note = document.getElementById('c-note').value.trim();
+            const name = document.getElementById('c-name').value;
+            const phone = document.getElementById('c-phone').value;
+            const address = document.getElementById('c-address').value;
             const ordered = products.filter(p => p.qty > 0);
 
-            if (!name || !address) return alert("Por favor ingresa tu nombre y dirección 📍");
-            if (ordered.length === 0) return alert("Selecciona al menos un producto 🌽");
+            if (!name || !phone || !address) return alert("Completa tus datos para el envío 📝");
+            if (ordered.length === 0) return alert("¿Cuántas arepas vas a llevar? 🌽");
 
-            // Guardamos datos del cliente para la próxima vez
-            localStorage.setItem('c_name', name);
-            localStorage.setItem('c_address', address);
-
-            let msg = `*AREPAS LA TRONCAL* 🌽%0A%0A`;
-            msg += `*Cliente:* ${name}%0A`;
-            msg += `*Dirección:* ${address}%0A`;
-            if(note) msg += `*Nota:* ${note}%0A`;
-            msg += `--------------------------%0A`;
+            let msg = `*🧾 NUEVO PEDIDO - AREPAS LA TRONCAL*%0A`;
+            msg += `----------------------------------------%0A`;
+            msg += `*CLIENTE:* ${name.toUpperCase()}%0A`;
+            msg += `*CELULAR:* ${phone}%0A`;
+            msg += `*DIRECCIÓN:* ${address}%0A`;
+            if(userPos) msg += `*UBICACIÓN GPS:* ${userPos}%0A`;
+            msg += `----------------------------------------%0A`;
+            msg += `*DETALLE DEL PEDIDO:*%0A`;
 
             let total = 0;
             ordered.forEach(p => {
                 const sub = p.qty * p.price;
-                msg += `${p.qty} x ${p.name} ($${sub.toLocaleString()})%0A`;
+                msg += `• ${p.qty} x ${p.name} ($${sub.toLocaleString()})%0A`;
                 total += sub;
             });
 
-            msg += `--------------------------%0A`;
-            msg += `*TOTAL A PAGAR: $${total.toLocaleString()}*`;
+            msg += `----------------------------------------%0A`;
+            msg += `*TOTAL A COBRAR: $${total.toLocaleString()}*%0A`;
+            msg += `----------------------------------------%0A`;
+            msg += `_Pedido generado por Vibras Positivas App_`;
 
             window.open(`https://wa.me/${WS_NUMBER}?text=${msg}`);
         };
@@ -184,11 +181,6 @@
             if(prompt("Clave:") === "vibras") document.getElementById('admin-panel').classList.toggle('hidden');
         };
 
-        // Autorellenar datos del cliente si ya ha pedido antes
-        document.getElementById('c-name').value = localStorage.getItem('c_name') || "";
-        document.getElementById('c-address').value = localStorage.getItem('c_address') || "";
-
-        checkAppStatus();
         renderMenu();
     </script>
 </body>
